[package]
name = "mi-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
#Este crate permite cargas variables de entorno desde un fichero
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
serde = "1.0.133"
thiserror = "1.0.30"
futures = "0.3.19"
async-trait = "0.1.52"

[dev-dependencies]
actix-rt="2"